# pyriksprot

./: .env  .gitattributes  .gitignore  .pylintrc  CHANGELOG.md  CHANGES.md  LICENSE  Makefile  Makefile.dev  README.md  dispatch_test.py  pyproject.toml  pyrightconfig.json  requirements.txt  setup.py
configs/: config.yml  config_v1.4.1_v1.1.3.yml  v1.1.0.yml  v1.4.1.yml
docs/: classes.drawio  use-case.drawio
metadata/: 05_party.sql  10_make_light.sql  metadata.0.4.0.db.sql  rules.yaml  sandbox.sql  trash.sql
metadata/sql/: 01_data_updates.sql  02_code_tables.sql  03_persons_of_interest.sql  04_terms_of_office.sql  05_person_party.sql  06_unknown.sql  09_cleanup.sql
pyriksprot/: __init__.py  cluster.py  collect.py  collect_generic.py  collect_speech.py  convert.py  corpus_index.py  dispatch.py  extract.py  extract_tags.py  extract_text.py  gitchen.py  group.py  interface.py  iterators.py  member.py  merge.py  merge_segments.py  merge_speech.py  merge_utterances.py  metadata.py  model.py  parse.py  persist.py  preprocess.py  segment.py  simple_merge.py  source.py  sparv_tokenize.py  tag.py  tf.py  to_speech.py  tokenize.py  utility.py
pyriksprot/configuration/: __init__.py  config.py  inject.py  registry.py
pyriksprot/corpus/: __init__.py  corpus_index.py  iterate.py  utility.py
pyriksprot/corpus/parlaclarin/: __init__.py  convert.py  iterate.py  parse.py  tf.py
pyriksprot/corpus/tagged/: __init__.py  iterate.py  persist.py
pyriksprot/dehyphenation/: __init__.py  flair_dehyphen.py  swe_dehyphen.py  utility.py
pyriksprot/dispatch/: __init__.py  dispatch.py  item.py  merge.py  utility.py
pyriksprot/dispatchers/: one_hot.py
pyriksprot/foss/: pos_tags.py  sparv_tokenize.py  untangle.py
pyriksprot/metadata/: __init__.py  codecs.py  config.py  corpus.py  corpus_index_factory.py  database.py  deprecated_member.py  download.py  generate.py  metadata_factory.py  metadata_index.py  person.py  repository.py  schema.py  subset.py  utility.py  utterance.py  verify.py
pyriksprot/parlaclarin/: __init__.py  convert.py  extract.py  iterate.py  parse.py  tf.py
pyriksprot/parlaclarin/resources/templates/: __init__.py  paragraphs.txt.jinja  speeches.xml.jinja
pyriksprot/parlaclarin/resources/xslt/: test.xslt
pyriksprot/purgatory/: collect_speech.py  extract_speech.py  member.py  members_test.py  riksprot2persons.py
pyriksprot/resources/templates/: __init__.py  paragraphs.txt.jinja  paragraphs.xml.jinja  speeches.cdata.xml.jinja  speeches.txt.jinja  speeches.xml.jinja
pyriksprot/resources/xslt/: parla_clarin_to_xml.xslt
pyriksprot/script/: riksprot_corpus.py  riksprot_frequencies.py  riksprot_transform.py
pyriksprot/scripts/: collectwhos.py  csv2pgsql.py  fix_filenames.py  fix_speaker_notes.py  make_config.py  metadata2db.py  riksprot2any.py  riksprot2basic.py  riksprot2persons.py  riksprot2speech.py  riksprot2speech_index.py  riksprot2speech_text.py  riksprot2speechtexts.py  riksprot2tagged.py  riksprot2text.py  riksprot2tfs.py  riksprot2vrt.py  speaker_note2csv  speakerhash.py  speech_index.py  subset_corpus.py  subset_vrt_corpus.py  tag.py  tag_info.py  utils.py  xml2csv
pyriksprot/sql/: 00_rename.sql  02_code_tables.sql  03_persons_of_interest.sql  04_terms_of_office.sql  05_person_party.sql  10_make_light.sql  __init__.py  scratchpad.sql
pyriksprot/sql/v0.10.0/: 03_persons_of_interest.sql  04_terms_of_office.sql  config.py  schema.json
pyriksprot/sql/v1.1.0/: 00_rename.sql  01_data_updates.sql  02_code_tables.sql  03_persons_of_interest.sql  04_terms_of_office.sql  05_person_party.sql  06_unknown.sql  09_cleanup.sql  schema.json
pyriksprot/sql/v1.1.0/extras/: 10_make_light.sql
pyriksprot/tagged_corpus/: __init__.py  extract.py  iterate.py  persist.py
pyriksprot/templates/: config-template.yml.j2  prot-xx.jinja
pyriksprot/workflows/: __init__.py  _extract_speech_ids.py  create_metadata.py  export_vrt.py  extract_speech.py  extract_speech_text.py  extract_tags.py  extract_text.py  speech_index.py  subset_corpus.py  tag.py  tf.py
pyriksprot_script/: riksprot2any.py  riksprot2text.py  riksprot_frequencies.py
resources/: riksprot2tagged_year_who_1965.yml  speech_corpus.yml
sample_opts/: riksprot2speech v042.yml  riksprot2speech_v043.yml  riksprot2tagged_year_who.yml  riksprot2tagged_year_who_1965.yml
script/: parla_transform.py
tests/: bug_test.py  config.yml  config_test.py  config_test_absolute_paths.yml  conftest.py  convert_test.py  cwb_test.py  dehyphen_test.py  dispatch_test.py  extract_test.py  fakes.py  foss_test.py  frequency_test.py  infrastructure_test.py  interface_test.py  iterators_test.py  members_test.py  merge_test.py  model_test.py  parse_test.py  persist_test.py  speech_test.py  tag_test.py  tokenize_test.py  utility.py  utility_test.py  vrt_test.py
tests/metadata/: generate_test.py  metadata_index_test.py  metadata_test.py  utility_test.py  verify_test.py
tests/parlaclarin/: convert_test.py  extract_test.py  frequency_test.py  iterate_test.py  metadata_test.py  parse_test.py  utility.py
tests/profile/: extract.py  extract_tagged_frames.py  extract_text.py
tests/scripts/: make_test_data.py  testdata.py
tests/tagged_corpus/: extract_test.py  persist_test.py
tests/test_data/: config.yml  source_index.csv  test_documents.txt
tests/test_data/fake/: prot-1958-fake.xml  prot-1960-fake.xml  prot-1980-fake-empty.xml
tests/test_data/fakes/v0.6.0/: prot-1958-fake-utterances.csv  prot-1960-fake-merge-speeches.csv  prot-1960-fake-utterances.csv  prot-1960-fake.xml  prot-1980-empty-utterances.csv  prot-1980-empty.xml
tests/test_data/source/: corpus.yml
tests/test_data/source/5files/: .env  Makefile  protocols.txt
tests/test_data/source/fake/: prot-1958-fake.xml  prot-1960-fake.xml  prot-1980-fake-empty.xml
tests/test_data/source/v0.10.0/: riksprot_metadata.db
tests/test_data/source/v0.4.2/: riksprot_metadata.db
tests/test_data/source/v0.4.3/: riksprot_metadata.db
tests/test_data/source/v0.4.6/: checks-prot-1955--ak--22-utterances.xlsx  riksprot_metadata.db
tests/test_data/source/v0.6.0/cwb/: lemma.crc  (+53 more)
(+222 files in other folders)
