[tool.poetry]
name = "pyriksprot"
version = "2023.12.2"
description = "Python API for Riksdagens Protokoll"
authors = ["Roger Mähler <roger.mahler@hotmail.com>"]
packages = [
    { include = "pyriksprot" },
]
classifiers = [
    'License :: OSI Approved :: Apache Software License',
    'Operating System :: OS Independent',
    'Topic :: Software Development',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.11',
]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://westac.se"
repository = "https://github.com/welfare-state-analytics/pyriksprot"

[tool.poetry.dependencies]
python = "==3.11.*"
Jinja2 = "*"
click = "*"
pandas = "*"
loguru = "*"
lz4 = "*"
pdoc = "*"
requests = "*"
tqdm = "*"
pyarrow = "*"
more-itertools = "*"
python-dotenv = "*"
unidecode = "^1.3.6"
pygit2 = "^1.11.1"
sqlalchemy = "^2.0.6"
psycopg2-binary = "^2.9.5"
nltk = "^3.8.1"
dynaconf = "^3.1.12"
pathvalidate = "^2.5.2"

[tool.poetry.dev-dependencies]
black = "*"
coverage = "*"
flake8 = "*"
flake8-black = "*"
isort = "*"
pre-commit = "*"
pycodestyle = "*"
pyflakes = "*"
pylint = "*"
pytest = "*"
pytest-cov = "*"
pyinstrument = "*"
pytest-codeblocks = "*"
pdoc = "^13.1.1"

[tool.poetry.scripts]
riksprot2any = "pyriksprot.scripts.riksprot2any:main"
riksprot2tfs = "pyriksprot.scripts.riksprot2tfs:main"
riksprot2vrt = "pyriksprot.scripts.riksprot2vrt:export_yearly_folders"
riksprot2text = "pyriksprot.scripts.riksprot2text:main"
riksprot2speech = "pyriksprot.scripts.riksprot2speech:main"
riksprot2speech_text = "pyriksprot.scripts.riksprot2speech_text:main"
subset-corpus = "pyriksprot.scripts.subset_corpus:main"
speech-index = "pyriksprot.scripts.speech_index:main"
metadata2db = "pyriksprot.scripts.metadata2db:main"

[tool.poetry.group.dev.dependencies]
sphinx = "^7.0.1"
pydata-sphinx-theme = "^0.13.3"
recommonmark = "^0.7.1"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-rfE", "-q", "-s"]
log_cli = "False"
testpaths = ["tests"]
python_files = "*_test.py"
python_functions = "test_*"
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
norecursedirs = [
    "test_data",
    "output",
    "__pycache__",
    "deprecated",
    ".git",
    ".github",
    ".vscode",
    "profile-reports",
    "tmp",
]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.black]
skip_string_normalization = true
line-length = 120
target-version = ["py38"]
skip-string-normalization = true
exclude = '''
(
  \.git
  | \.pypy_cache
  | \.pytest_cache
  | \.mypy_cache
  | deprecated
)
'''

[tool.isort]
profile = "black"
line_length = 120
py_version = "auto"
float_to_top = true
src_paths = ["pyriksprot", "tests"]

[tool.coverage.run]
source = ["pyriksprot"]
branch = true
omit = ["**/__init__.py", "tests/*"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]
show_missing = true
sort = "Name"

[tool.mypy]
allow_redefinition = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true
strict_optional = false
warn_no_return = false
python_version = 3.8

[tool.pyright]
include = ["pyriksprot", "tests"]
exclude = [
    ".git",
    ".vscode",
    "**/__init__.py",
    "**/__pycache__",
    "tmp",
    "tests/test_data",
    "tests/output",
    "metadata",
    "profile-reports",
]
reportMissingImports = true
reportMissingTypeStubs = false
reportUntypedFunctionDecorator = false
reportUntypedClassDecorator = true
reportOptionalSubscript = false
reportOptionalMemberAccess = false
reportOptionalCall = false
pythonVersion = "3.11"

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

